fix(CY-362): 관리자 운영현황 조치 상태 전파 및 리뷰 피드백 반영
  - NO_TRAFFIC를 포함한 비정상 원천 상태와 관측 시각 전파
  - 운영 조치와 캠페인 심각도 우선순위를 명시적 규칙으로 통합
  - 사용하지 않는 호환 생성자와 중복 API 제거
  - Mock 데이터 및 계산기 테스트의 잘못된 성공 조건 수정
  - 테스트 데이터 생성 중복과 상태별 계약 검증 보강